# making-to-a-comp

./: CLAUDE.md  CLAUDE_md_snippet.md  MEMORY.md  NEXT_TASKS.md  pyproject.toml
agents/: __init__.py  pipeline.py
api/: auth.py  main.py
autoagent/: Dockerfile.base  README.md  agent-claude.py  agent.py  program.md  pyproject.toml
autoagent/tasks/marketing-strategy-01/: instruction.md
autoagent/tasks/marketing-strategy-01/tests/: test.py
company/: employees.json
dashboard/: app.js  data.js  index.html  login.html
data/: credentials.json  settings.json
forecasting/: __init__.py  forecast.py
tasks/: todo.md
timesfm/: AGENTS.md  README.md  pyproject.toml
timesfm/src/timesfm.egg-info/: PKG-INFO
timesfm/src/timesfm/timesfm_2p5/: timesfm_2p5_base.py  timesfm_2p5_flax.py  timesfm_2p5_torch.py
timesfm/timesfm-forecasting/: SKILL.md
timesfm/timesfm-forecasting/examples/anomaly-detection/: detect_anomalies.py
timesfm/timesfm-forecasting/examples/anomaly-detection/output/: anomaly_detection.json
timesfm/timesfm-forecasting/examples/covariates-forecasting/: demo_covariates.py
timesfm/timesfm-forecasting/examples/global-temperature/: README.md  generate_animation_data.py  generate_gif.py  generate_html.py  run_example.sh  run_forecast.py  temperature_anomaly.csv  visualize_forecast.py
timesfm/timesfm-forecasting/references/: api_reference.md  data_preparation.md  system_requirements.md
timesfm/timesfm-forecasting/scripts/: check_system.py  forecast_csv.py
timesfm/v1/src/timesfm/: patched_decoder.py  pytorch_patched_decoder.py
(+6 files in other folders)
