[project]
name = "making-to-a-comp"
version = "0.1.0"
description = "AI marketing pipeline startup — Tokyo"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
forecast = [
    "timesfm[torch]",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
